Overflow fixed

--- a/src/web/app/components/adding-question-panel/adding-question-panel.component.scss
+++ b/src/web/app/components/adding-question-panel/adding-question-panel.component.scss
@@ -1,3 +1,5 @@
 .background-color-light-blue {
   background-color: #EAEFF5;
+  display: flex;
+  justify-content: center;
 }
